--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
