--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "sass": "^1.66.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "concurrently \"npm run server\" \"npm run start \"",
+    "server": "json-server -w server/db.json -p 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "concurrently": "^8.2.2",
+    "gh-pages": "^6.0.0",
+    "json-server": "^0.17.4"
   }
 }
