--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
+    "libphonenumber-js": "^1.10.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
